--- a/Pandas_CheatSheet_101.ipynb
+++ b/Pandas_CheatSheet_101.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color='blue'>Pandas Cheatsheet</font>\n"
+    "# <font color='blue'> Pandas Cheatsheet </font>"
    ]
   },
   {
@@ -157,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"DataFrame.png\" alt=\"Drawing\" style=\"width: 800px;\"/>"
+    "<img src=\"Figure_1.png\" alt=\"Drawing\" style=\"width: 800px;\"/>"
    ]
   },
   {
