--- a/Pandas_CheatSheet_101.ipynb
+++ b/Pandas_CheatSheet_101.ipynb
@@ -4,56 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color='blue'> Pandas Cheatsheet </font>"
+    "# Pandas Cheatsheet"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Table of content"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<ol>\n",
-    "<a href='#1'>1. Pandas Basics</a><BR>\n",
-    "<a href='#2'>2. Basics with DataFrames</a><BR>\n",
-    "<ol>\n",
-    "<a href='#2.1'>2.1 Create a DataFrame from a Dictionary</a><BR>\n",
-    "<a href='#2.2'>2.2 Now download it as an Excel file ;)</a><BR>\n",
-    "<a href='#2.3'>2.3 Collecting the information of a DataFrame.</a><BR>\n",
-    "<a href='#2.4'>2.4 Column Selection</a><BR>\n",
-    "<a href='#2.5'>2.5 Both Row and Column Selection</a><prev><BR>\n",
-    "</ol>\n",
-    "<a href='#3'>3. Select Missing Values</a><BR>\n",
-    "<a href='#4'>4. Composite Selection</a><BR>\n",
-    "<a href='#5'>5. Change Specific Value in the DataFrame</a><BR>\n",
-    "<a href='#6'>6. Sum values in a column with SUM()</a><BR>\n",
-    "<a href='#7'>7. Calculate the mean in a column with MEAN()</a><BR>\n",
-    "<a href='#8'>8. Add a row</a><BR>\n",
-    "    <ol>\n",
-    "    <a href='#8.1'>8.1 Easy method to append one row defining a new row</a><BR>\n",
-    "    <a href='#8.2'>8.2 Complex method to append one row with APPEND()</a><BR>\n",
-    "    </ol>\n",
-    "<a href='#9'>9. Delete a row using DROP()</a><BR>\n",
-    "<a href='#10'>10. Counting the Quantity of Different Values in a Column with VALUE_COUNTS()</a><BR>\n",
-    "<a href='#11'>11. Counting values of all columns with COUNT()</a><BR>\n",
-    "<a href='#12'>12. Sorting Values in a Column Ascending or Descending order with SORT_VALUES()</a><BR>\n",
-    "<a href='#13'>13. Replacing Values in a Column with two values with REPLACE()</a><BR>\n",
-    "<a href='#14'>14. Pivot Table Using Pandas GROUPBY()</a><BR>\n",
-    "<a href='#15'>15. Move values of one column up or down with SHIFT()</a><BR>\n",
-    "</ol>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='1'></a>\n",
-    "### <font color='blue'>1. Pandas Basics</font>"
+    "### 1. Import Pandas"
    ]
   },
   {
@@ -109,8 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='2'></a>\n",
-    "### <font color='blue'>2. Basics with DataFrames</font>"
+    "### 2. Pandas Basics"
    ]
   },
   {
@@ -124,8 +81,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='2.1'></a>\n",
-    "<font color='blue'>**2.1 Create a DataFrame from a Dictionary**</font>"
+    "\n",
+    "**2.1 Create a DataFrame from a Dictionary**"
    ]
   },
   {
@@ -188,8 +145,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='2.2'></a>\n",
-    "<font color='blue'>**2.2 Now download it as an Excel file ;)**</font>"
+    "**2.2 Now download it as an Excel file ;)**"
    ]
   },
   {
@@ -205,8 +161,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='2.3'></a>\n",
-    "<font color='blue'>**2.3 Collecting the information of a DataFrame. **</font>\n",
+    "**2.3 Collecting the information of a DataFrame. **\n",
     "1. Type of Pandas Object \n",
     "2. Quantity of indexes or rows and their names from where to where. \n",
     "3. Quantity of columns. \n",
@@ -228,8 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='2.4'></a>\n",
-    "<font color='blue'>**2.4 Row Selection**</font>"
+    "**2.4 Row Selection**"
    ]
   },
   {
@@ -280,8 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='2.4'></a>\n",
-    "<font color='blue'>**2.4 Column Selection**</font>"
+    "**2.4 Column Selection**"
    ]
   },
   {
@@ -341,8 +294,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='2.5'></a>\n",
-    "<font color='blue'>**2.5 Both Row and Column Selection**</font>"
+    "**2.5 Both Row and Column Selection**"
    ]
   },
   {
@@ -358,8 +310,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='3'></a>\n",
-    "### <font color='blue'> 3. Select Missing Values </font>"
+    "\n",
+    "### 3. Select Missing Values"
    ]
   },
   {
@@ -375,8 +327,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='4'></a>\n",
-    "### <font color='blue'> 4. Composite Selection </font>"
+    "\n",
+    "### 4. Composite Selection"
    ]
   },
   {
@@ -401,8 +353,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='5'></a>\n",
-    "### <font color='blue'>5. Change Specific Value in the DataFrame  </font>\n",
+    "### 5. Change Specific Value in the DataFrame \n",
     "It follows the [row, column] nomenclature to call a specific value in the DataFrame"
    ]
   },
@@ -420,8 +371,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='6'></a>\n",
-    "### <font color='blue'> 6. Sum values in a column with SUM()</font>"
+    "\n",
+    "### 6. Sum values in a column with SUM()"
    ]
   },
   {
@@ -437,8 +388,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='7'></a>\n",
-    "### <font color='blue'> 7. Calculate the mean in a column with MEAN() </font>"
+    "\n",
+    "### 7. Calculate the mean in a column with MEAN() "
    ]
   },
   {
@@ -454,15 +405,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='8'></a>\n",
-    "### <font color='blue'> 8. Add a row </font>"
+    "\n",
+    "\n",
+    "### 8. Add a row"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='8.1'></a>\n",
+    "\n",
     "**8.1 Easy method to append one row defining a new row**"
    ]
   },
@@ -825,8 +777,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='9'></a>\n",
-    "### <font color='blue'>9. Delete a row using DROP()</font>"
+    "\n",
+    "### 9. Delete a row using DROP()"
    ]
   },
   {
@@ -965,8 +917,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='10'></a>\n",
-    "### <font color='blue'> 10. Counting the Quantity of Different Values in a Column with VALUE_COUNTS()</font>"
+    "### 10. Counting the Quantity of Different Values in a Column with VALUE_COUNTS()"
    ]
   },
   {
@@ -996,8 +947,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='11'></a>\n",
-    "### <font color='blue'> 11. Counting values of all columns with COUNT()</font>"
+    "### 11. Counting values of all columns with COUNT()"
    ]
   },
   {
@@ -1028,8 +978,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='12'></a>\n",
-    "### <font color='blue'>12. Sorting Values in a Column Ascending or Descending order with SORT_VALUES()</font>"
+    "### 12. Sorting Values in a Column Ascending or Descending order with SORT_VALUES()"
    ]
   },
   {
@@ -1166,7 +1115,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='13'></a>\n",
     "### 13. Replacing Values in a Column with two values with REPLACE()"
    ]
   },
@@ -1452,7 +1400,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='14'></a>\n",
     "### 14. Pivot Table Using Pandas GROUPBY()"
    ]
   },
@@ -1538,8 +1485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='15'></a>\n",
-    "### <font color='blue'>15. Move values of one column up or down with SHIFT()</font>"
+    "### 15. Move values of one column up or down with SHIFT()"
    ]
   },
   {
